@@ -1,3 +1,7 @@
+2012-03-30         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* noreturn.m4: New file.
+
 2012-03-28         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* 4.0.1: Release tar ball made.
