@@ -1,3 +1,7 @@
+2012-03-30         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* configure.ac (GAWK_AC_NORETURN): Do as macro instead of inline.
+
 2012-03-29         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* dfa.h, dfa.c: Sync with grep. Major cleanups and some changes
